--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap');
+
 *{
   margin: 0;
   padding: 0;
 }
 
+body{
+  background-color: #3a3a3a;
+}
+
 .headerHome{
   background-color: black;
   height: 6rem;
-}
-
-.navHome{
-  font-size: 10rem;
 }
 
 .img1{
@@ -21,4 +23,109 @@
 .estilo{
   font-size: 5rem;
   color: black;
+}
+
+a{
+  text-decoration: none;
+  font-size: 1rem;
+  color: white;
+  font-weight: bold;
+  font-family: 'Cormorant SC', serif;
+}
+
+a:hover{
+  color: white;
+  box-shadow: 1px 1px 1px white;
+}
+
+.navHome{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: -4rem;
+  color: white;
+}
+
+h1{
+  color: #ffffff;
+  font-size: 5rem;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+h2{
+  color: #ffffff;
+  font-size: 4rem;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.changeStyle{
+  text-align: center;
+  font-size: 5rem;
+}
+
+button{
+  width: 8rem;
+  height: 4rem;
+  border-radius: 2rem;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+
+.restar:hover{
+  background-color: red;
+}
+
+.sumar:hover{
+  background-color: green;
+}
+
+.botones{
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+  margin-top: 2rem;
+}
+
+.listNombres{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+li{
+  font-size: 2rem;
+  color: #ffffff;
+}
+
+.mostrar{
+  width: 10rem;
+}
+
+.mostrar:hover{
+  background-color: blue;
+}
+
+.mostrarTexto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input{
+  width: 11rem;
+  height: 2rem;
+}
+
+#texto{
+  font-size: 1.5rem;
+  color: aqua;
+}
+
+.style1{
+  color: crimson;
+  -webkit-text-stroke: 2px black;
 }
