--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 
 *{
   margin: 0;
@@ -128,4 +129,36 @@ input{
 .style1{
   color: crimson;
   -webkit-text-stroke: 2px black;
+}
+
+.textArea{
+  text-align: center;
+}
+
+.texto{
+  color: #ffffff;
+}
+
+.botonsMjs:hover{
+  background-color: #ffffff;
+  color: black;
+}
+
+.borrar{
+  background-color: #ffffff;
+  color: black;
+}
+
+.borrar:hover{
+  background-color: #000000;
+  color: white;
+}
+
+.reloj{
+  background-color: #000000;
+  border-radius: 2rem;
+}
+
+.hora{
+  font-family: 'Bree Serif', serif;
 }
